# weather-cli-app-codemotion

./: Cargo.toml
src/: main.rs
